src/objects/Question_Response__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Storing User answers</description>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Question Questionnaire</description>
        <label>Question Questionnaire</label>
        <referenceTo>Question_Questionnaire__c</referenceTo>
        <relationshipLabel>Question Response</relationshipLabel>
        <relationshipName>Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Question Response</relationshipLabel>
        <relationshipName>Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Questionnaire Form</description>
        <label>Questionnaire Form</label>
        <referenceTo>Questionnaire_Form__c</referenceTo>
        <relationshipLabel>Question Response</relationshipLabel>
        <relationshipName>Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Questionnaire</description>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>Question Response</relationshipLabel>
        <relationshipName>Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Set a question score</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Question_Questionnaire__c</columns>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>Score__c</columns>
        <columns>Comment__c</columns>
        <columns>Questionnaire__c</columns>
        <columns>Questionnaire_Form__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>